Learning about CSS (day 1)

--- a/recipes/massaman-curry.html
+++ b/recipes/massaman-curry.html
@@ -3,6 +3,7 @@
     <head>
         <meta Charset="UTF-8">
         <title>Massaman Curry</title>
+        <link rel="stylesheet" href="../stylesrecipe.css" />
     </head>
     <body>
         <h1>Massaman Curry</h1>
