--- a/recipes/sushi-roll.html
+++ b/recipes/sushi-roll.html
@@ -3,6 +3,7 @@
     <head>
         <meta Charset="UTF-8">
         <title>Sushi Roll</title>
+        <link rel="stylesheet" href="../stylesrecipe.css" />
     </head>
     <body>
         <h1>Sushi Roll</h1>
