--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Index</title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/massaman-curry.html">Massaman Curry</a></li>
-        <li><a href="recipes/sushi-roll.html">Sushi Roll</a></li>
-        </ul>
+        <h1 class="header">Odin Recipes</h1>
+        <div class="food">
+            <p><a href="recipes/lasagna.html">Lasagna</a></p>
+            <p><a href="recipes/massaman-curry.html">Massaman Curry</a></p>
+            <p><a href="recipes/sushi-roll.html">Sushi Roll</a></p>
+        </div>
     </body>
 </html>
