--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
     <head>
         <meta Charset="UTF-8">
         <title>lasagna</title>
+        <link rel="stylesheet" href="../stylesrecipe.css" />
     </head>
     <body>
         <h1>Lasagna</h1>
