--- a/recipes/massaman-curry.html
+++ b/recipes/massaman-curry.html
@@ -8,35 +8,38 @@
     <body>
         <h1>Massaman Curry</h1>
         <img src="../images/massaman.jpg">
-        <h2>Description</h2>
-        <p>Thai Muslim food has a rich tradition that has been used to help popularize Thai curries all over the world. If you’ve heard the names of ‘massaman‘ or ‘khao soi‘ curries, they are great examples of this unique and too often overlooked subculture of Thai cuisine. Thai Muslim culinary heritage usually demands red meat stewed for long periods to become tender, fragrant, and extend the shelf life of the resulting curry. However, dark meat cuts of chicken make a great substitution in these curries and allow us to shorten the cooking time.</p>
-        <p>This recipe walks the line between full-flavored tradition and not spending hours in the kitchen. The key to saving time is getting ahead on your prep. This means adding the extra strep of blanching your potatoes, shortening the time it takes to cook them in your curry later.</p>
-        <h3>Ingredients</h3>
-        <ul>
-            <li>500g of chicken thighs, deboned</li>
-            <li>liter coconut milk</li>
-            <li>2 cups chicken stock</li>
-            <li>2 tbsp of massaman curry paste</li>
-            <li>5 tbsp cooking oil (we used coconut)</li>
-            <li>2 potatoes, peeled, parboiled and chopped into 4-5cm chunks</li>
-            <li>1/2 cup of roasted and ground unsalted peanuts (for garnish)</li>   
-            <li>tbsp of tamarind juice</li>
-            <li>3 tbsp of palm sugar</li>
-            <li>1 tsp of salt</li>  
-        </ul>
-        <h3>Steps</h3>
-        <ol>
-            <li>Start by blanching your peeled potatoes in boiling water for 3-4 minutes.</li>
-            <li>Add coconut oil to your wok over medium heat.</li>
-            <li>When your oil is hot, place your chicken thighs in the oil (4 tbsp), skin side down.</li>
-            <li>Allow the skin to become golden and crisp on the edges, then flip and repeat for the other side.</li>
-            <li>Remove the chicken, set aside, and add the remaining 1 tbsp of oil to your wok. Fry your curry paste until fragrant. When ready add 1 cup of coconut milk to keep your paste from burning.</li>
-            <li>Add potatoes, and chicken thighs. Then pour in your chicken stock and half of the remaining coconut milk.</li>
-            <li>Cover for 20 minutes, gradually adding more coconut milk to keep the curry from getting too dry. Remember to check the potatoes occasionally, using a fork to see if they have become soft.</li>
-            <li>When your vegetables are fork tender, season with tamarind, salt, and palm sugar to taste.</li>
-            <li>Stir in a few dry spices (optional) and turn off the heat.</li>
-            <li>Before serving, garnish with ground peanuts. (optional)</li>
-        </ol>
+            <div class="container">
+                <div class="description">
+                <p>Thai Muslim food has a rich tradition that has been used to help popularize Thai curries all over the world. If you’ve heard the names of ‘massaman‘ or ‘khao soi‘ curries, they are great examples of this unique and too often overlooked subculture of Thai cuisine. Thai Muslim culinary heritage usually demands red meat stewed for long periods to become tender, fragrant, and extend the shelf life of the resulting curry. However, dark meat cuts of chicken make a great substitution in these curries and allow us to shorten the cooking time.</p>
+                <p>This recipe walks the line between full-flavored tradition and not spending hours in the kitchen. The key to saving time is getting ahead on your prep. This means adding the extra strep of blanching your potatoes, shortening the time it takes to cook them in your curry later.</p>
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>500g of chicken thighs, deboned</li>
+                    <li>liter coconut milk</li>
+                    <li>2 cups chicken stock</li>
+                    <li>2 tbsp of massaman curry paste</li>
+                    <li>5 tbsp cooking oil (we used coconut)</li>
+                    <li>2 potatoes, peeled, parboiled and chopped into 4-5cm chunks</li>
+                    <li>1/2 cup of roasted and ground unsalted peanuts (for garnish)</li>   
+                    <li>tbsp of tamarind juice</li>
+                    <li>3 tbsp of palm sugar</li>
+                    <li>1 tsp of salt</li>  
+                </ul>
+                <h3>Steps</h3>
+                <ol>
+                    <li>Start by blanching your peeled potatoes in boiling water for 3-4 minutes.</li>
+                    <li>Add coconut oil to your wok over medium heat.</li>
+                    <li>When your oil is hot, place your chicken thighs in the oil (4 tbsp), skin side down.</li>
+                    <li>Allow the skin to become golden and crisp on the edges, then flip and repeat for the other side.</li>
+                    <li>Remove the chicken, set aside, and add the remaining 1 tbsp of oil to your wok. Fry your curry paste until fragrant. When ready add 1 cup of coconut milk to keep your paste from burning.</li>
+                    <li>Add potatoes, and chicken thighs. Then pour in your chicken stock and half of the remaining coconut milk.</li>
+                    <li>Cover for 20 minutes, gradually adding more coconut milk to keep the curry from getting too dry. Remember to check the potatoes occasionally, using a fork to see if they have become soft.</li>
+                    <li>When your vegetables are fork tender, season with tamarind, salt, and palm sugar to taste.</li>
+                    <li>Stir in a few dry spices (optional) and turn off the heat.</li>
+                    <li>Before serving, garnish with ground peanuts. (optional)</li>
+                </ol>
+                </div>
+            </div>    
         <a href="../index.html">Home</a>
     </body>
 </html>
