--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,37 +7,40 @@
     </head>
     <body>
         <h1>Lasagna</h1>
-        <img src="../images/lasagna.jpg">
-        <h2>Description</h2>
+            <div class="container">
+                <img src="../images/lasagna.jpg">
+                <div class="description">
 
-        <p>Everyone loves a good lasagna, right? It's a great way to feed a crowd and a perfect dish to bring to a potluck. It freezes well. It reheats well. Leftovers will keep you happy for days.</p>
-        <p>Simply Recipes reader Alton Hoover sent me his favorite recipe for lasagna which he has been cooking since his college days. Alton's original recipe created enough lasagna for a small army so I halved it. What is posted here will easily serve eight people.</p>
+                <p>Everyone loves a good lasagna, right? It's a great way to feed a crowd and a perfect dish to bring to a potluck. It freezes well. It reheats well. Leftovers will keep you happy for days.</p>
+                <p>Simply Recipes reader Alton Hoover sent me his favorite recipe for lasagna which he has been cooking since his college days. Alton's original recipe created enough lasagna for a small army so I halved it. What is posted here will easily serve eight people.</p>
 
-        <h3>Ingredients</h3>
-        <ul>
-            <li>1 pound ground beef chuck</li>
-            <li>1/2 medium onion, diced (about 3/4 cup)</li>
-            <li>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</li>
-            <li>1 (28-ounce)can good-quality tomato sauce</li>
-            <li>3 ounces tomato paste (half a 6-ounce can)</li>
-            <li>1 pinch garlic powder and/or garlic salt</li>
-            <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
-            <li>Salt</li>
-            <li>1/2 pound dry lasagna noodles (requires 9 lasagna noodles - unbroken)</li>
-            <li>1 1/2 pounds (24 ounces) mozzarella cheese, grated or sliced</li>
-            <li>1/4 pound (4 ounces) freshly grated Parmesan cheese</li>
-        </ul>
-        <h3>Steps</h3>
-        <ol>
-            <li>Put pasta water on to boil:</li>
-            <li>Brown the ground beef:</li>
-            <li>Cook the bell pepper, onions, and garlic; add back the beef:</li>
-            <li>Make the sauce</li>
-            <li>Boil and drain the lasagna noodles</li>
-            <li>Preheat the oven to 375°F.</li>
-            <li>Assemble the lasagna</li>
-            <li>Bake, cool, and serve</li>
-        </ol>
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>1 pound ground beef chuck</li>
+                    <li>1/2 medium onion, diced (about 3/4 cup)</li>
+                    <li>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</li>
+                    <li>1 (28-ounce)can good-quality tomato sauce</li>
+                    <li>3 ounces tomato paste (half a 6-ounce can)</li>
+                    <li>1 pinch garlic powder and/or garlic salt</li>
+                    <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
+                    <li>Salt</li>
+                    <li>1/2 pound dry lasagna noodles (requires 9 lasagna noodles - unbroken)</li>
+                    <li>1 1/2 pounds (24 ounces) mozzarella cheese, grated or sliced</li>
+                    <li>1/4 pound (4 ounces) freshly grated Parmesan cheese</li>
+                </ul>
+                <h3>Steps</h3>
+                <ol>
+                    <li>Put pasta water on to boil:</li>
+                    <li>Brown the ground beef:</li>
+                    <li>Cook the bell pepper, onions, and garlic; add back the beef:</li>
+                    <li>Make the sauce</li>
+                    <li>Boil and drain the lasagna noodles</li>
+                    <li>Preheat the oven to 375°F.</li>
+                    <li>Assemble the lasagna</li>
+                    <li>Bake, cool, and serve</li>
+                </ol>
+                </div>
+            </div>
         <a href="../index.html">Home</a>
     </body>
 </html>
